--- a/src/X.Bluesky/X.Bluesky.csproj
+++ b/src/X.Bluesky/X.Bluesky.csproj
@@ -28,10 +28,11 @@
     </ItemGroup>
 
     <ItemGroup>
-      <None Update="icon.png">
-        <Pack>True</Pack>
-        <PackagePath></PackagePath>
-      </None>
+        <None Include="icon.png" Pack="True" PackagePath=""/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <None Include="../../README.md" Pack="true" PackagePath="\"/>
     </ItemGroup>
 
 </Project>
