--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -5,7 +5,7 @@
 
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <PackageLicenseFile>LICENSE.md</PackageLicenseFile>
-<!--        <PackageIcon>x-web.png</PackageIcon>-->
+        <PackageIcon>x.png</PackageIcon>
 
         <Authors>Andrew Gubskiy</Authors>
         <Copyright>Andrew Gubskiy © 2024</Copyright>
