--- a/src/X.Bluesky/X.Bluesky.csproj
+++ b/src/X.Bluesky/X.Bluesky.csproj
@@ -1,32 +1,20 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <PackageReadmeFile>README.md</PackageReadmeFile>
+        <Title>X.Bluesky</Title>
+        <Description>Simple client for posting to Bluesky</Description>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <Authors>Andrew Gubskiy</Authors>
-        <Description>Simple client for posting to Bluesky</Description>
-        <Copyright>Andrew Gubskiy</Copyright>
-        <PackageProjectUrl>https://github.com/ernado-x/X.Bluesky</PackageProjectUrl>
         <PackageTags>bluesky, social networks</PackageTags>
-        <AssemblyVersion>1.0.3.0</AssemblyVersion>
-        <FileVersion>1.0.3.0</FileVersion>
         <TargetFrameworks>net8.0;net6.0;netstandard2.1</TargetFrameworks>
         <LangVersion>default</LangVersion>
-        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-        <Title>X.Bluesky</Title>
-        <PackageLicenseUrl>https://raw.githubusercontent.com/ernado-x/X.Bluesky/main/LICENSE</PackageLicenseUrl>
-        <PackageIcon>icon.png</PackageIcon>
-        <RepositoryUrl>https://github.com/ernado-x/X.Bluesky</RepositoryUrl>
-        <RepositoryType>git</RepositoryType>
-        <Version>1.0.3</Version>
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="JetBrains.Annotations" Version="2024.2.0" PrivateAssets="all"/>
         <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0"/>
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3"/>
-        <PackageReference Include="X.Web.MetaExtractor" Version="2.0.4" />
+        <PackageReference Include="X.Web.MetaExtractor" Version="2.0.4"/>
     </ItemGroup>
 
     <ItemGroup>
@@ -35,6 +23,11 @@
 
     <ItemGroup>
         <None Include="../../README.md" Pack="true" PackagePath="\"/>
+        <None Include="../../LICENSE.md" Pack="true" PackagePath="\"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <None Include="../../x.png" Pack="true" PackagePath="\"/>
     </ItemGroup>
 
 </Project>
