--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -11,10 +11,10 @@
         <Copyright>Andrew Gubskiy © 2024</Copyright>
         <Company>Ukrainian .NET Developer Community</Company>
 
-        <Version>1.1.0</Version>
-        <AssemblyVersion>1.1.0</AssemblyVersion>
-        <FileVersion>1.1.0</FileVersion>
-        <PackageVersion>1.1.0</PackageVersion>
+        <Version>1.1.3-beta</Version>
+        <AssemblyVersion>1.1.3</AssemblyVersion>
+        <FileVersion>1.1.3</FileVersion>
+        <PackageVersion>1.1.3-beta</PackageVersion>
 
         <RepositoryType>git</RepositoryType>
         <RepositoryUrl>https://github.com/ernado-x/X.Bluesky.git</RepositoryUrl>
