--- a/src/X.Bluesky/X.Bluesky.csproj
+++ b/src/X.Bluesky/X.Bluesky.csproj
@@ -6,7 +6,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <PackageTags>bluesky, social networks</PackageTags>
-        <TargetFrameworks>net6.0;net8.0;net9.0;netstandard2.1</TargetFrameworks>
+        <TargetFrameworks>net8.0;net9.0;netstandard2.1</TargetFrameworks>
         <LangVersion>default</LangVersion>
     </PropertyGroup>
 
