--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -11,7 +11,7 @@
         <Copyright>Andrew Gubskiy © 2024</Copyright>
         <Company>Ukrainian .NET Developer Community</Company>
 
-        <Version>1.3.0-pre</Version>
+        <Version>1.3.0</Version>
         <AssemblyVersion>1.3.0</AssemblyVersion>
         <FileVersion>1.3.0</FileVersion>
         <PackageVersion>1.3.0-pre</PackageVersion>
