--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -14,7 +14,7 @@
         <Version>1.3.0</Version>
         <AssemblyVersion>1.3.0</AssemblyVersion>
         <FileVersion>1.3.0</FileVersion>
-        <PackageVersion>1.3.0-pre</PackageVersion>
+        <PackageVersion>1.3.0</PackageVersion>
 
         <RepositoryType>git</RepositoryType>
         <RepositoryUrl>https://github.com/ernado-x/X.Bluesky.git</RepositoryUrl>
