--- a/src/X.Bluesky/X.Bluesky.csproj
+++ b/src/X.Bluesky/X.Bluesky.csproj
@@ -6,7 +6,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <PackageTags>bluesky, social networks</PackageTags>
-        <TargetFrameworks>net6.0;net8.0;net9.0;netstandard2.1;</TargetFrameworks>
+        <TargetFrameworks>net6.0;net8.0;net9.0</TargetFrameworks>
         <LangVersion>default</LangVersion>
     </PropertyGroup>
 
@@ -14,6 +14,18 @@
         <PackageReference Include="JetBrains.Annotations" Version="2024.3.0" PrivateAssets="all"/>
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3"/>
         <PackageReference Include="X.Web.MetaExtractor" Version="2.0.4"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
+            <_Parameter1>X.Bluesky.Tests</_Parameter1>
+        </AssemblyAttribute>
+    </ItemGroup>
+
+    <ItemGroup>
+        <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
+            <_Parameter1>X.Bluesky.Tests.Integration</_Parameter1>
+        </AssemblyAttribute>
     </ItemGroup>
 
     <ItemGroup>
