--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -11,10 +11,10 @@
         <Copyright>Andrew Gubskiy © 2025</Copyright>
         <Company>Ukrainian .NET Developer Community</Company>
 
-        <Version>2.0.0</Version>
+        <Version>2.0.0-beta</Version>
         <AssemblyVersion>2.0.0</AssemblyVersion>
         <FileVersion>2.0.0</FileVersion>
-        <PackageVersion>2.0.0</PackageVersion>
+        <PackageVersion>2.0.0-beta</PackageVersion>
 
         <RepositoryType>git</RepositoryType>
         <RepositoryUrl>https://github.com/ernado-x/X.Bluesky.git</RepositoryUrl>
