--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -11,10 +11,10 @@
         <Copyright>Andrew Gubskiy © 2025</Copyright>
         <Company>Ukrainian .NET Developer Community</Company>
 
-        <Version>2.0.1-beta</Version>
-        <AssemblyVersion>2.0.1</AssemblyVersion>
-        <FileVersion>2.0.1</FileVersion>
-        <PackageVersion>2.0.1-beta</PackageVersion>
+        <Version>2.0.3</Version>
+        <AssemblyVersion>2.0.3</AssemblyVersion>
+        <FileVersion>2.0.3</FileVersion>
+        <PackageVersion>2.0.3</PackageVersion>
 
         <RepositoryType>git</RepositoryType>
         <RepositoryUrl>https://github.com/ernado-x/X.Bluesky.git</RepositoryUrl>
